fix: uses dvh units on splash section to fix bottom being covered in mobile browser

--- a/lucuberate-client/src/features/threeJS/LandingCanvas/style.css
+++ b/lucuberate-client/src/features/threeJS/LandingCanvas/style.css
@@ -9,12 +9,3 @@
   cursor: grabbing;
 }
 
-.landing-canvas div {
-  height: 60vh !important;
-}
-
-@media screen and (max-width: 720px) {
-  .landing-canvas.mobile-nav-is-shown div {
-    height: calc((100vh - 60px) * 0.65) !important;
-  }
-}
